clusters/talos-robbinsdale/apps/dns/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
